# product-service

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  req.txt  run.py
app/: database.py  init.py  main.py
app/product/: crud.py  models.py  schemas.py  views.py
migrations/: env.py
migrations/versions/: 41dc5e03112d_updated_products_table.py  736bc7e603b2_adding_products_table.py
tests/: conftest.py  test_product.py
