[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["Kartheekasasanka Kaipa <karthikasasanka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
uvicorn = "^0.13.2"
psycopg2 = "^2.8.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
